<resources>
    <string name="user_navigation_drawer_open">Open navigation drawer</string>
    <string name="user_navigation_drawer_close">Close navigation drawer</string>

    <!-- FRAGMENT DASHBOARD -->
    <string name="user_fragment_dashboard_my_profile">My Profile</string>
    <string name="user_fragment_dashboard_credentials">Credentials</string>
    <string name="user_fragment_dashboard_my_favourites">My Favourites</string>
    <string name="user_fragment_dashboard_my_orders">My Orders</string>
    <string name="user_fragment_dashboard_my_rides">My Rides</string>
    <string name="user_fragment_dashboard_chat_box">Chat Box</string>

    <!-- FRAGMENT PROFILE -->
    <string name="user_fragment_profile_storage_permission_error">Permission denied to read your External storage.</string>

    <!-- FRAGMENT CREDENTIALS -->
    <string name="user_fragment_credentials_current_mobile_number">Current mobile number</string>
    <string name="user_fragment_credentials_new_mobile_number">New mobile number</string>
    <string name="user_fragment_credentials_send_verification_code">Send verification code</string>
    <string name="user_fragment_credentials_change_mobile_number">Change mobile number</string>
    <string name="user_fragment_credentials_change_email">Change email</string>
    <string name="user_fragment_credentials_current_email">Current email</string>
    <string name="user_fragment_credentials_new_email">New email</string>
    <string name="user_fragment_credentials_change_password">Change password</string>
    <string name="user_fragment_credentials_current_password">Current password</string>
    <string name="user_fragment_credentials_new_password">New password</string>
    <string name="user_fragment_credentials_update_password">Update password</string>
    <string name="user_fragment_credentials_current_mobile_number_is_required">Current mobile number is required</string>
    <string name="user_fragment_credentials_new_mobile_number_is_required">New mobile number is required</string>
    <string name="user_fragment_credentials_current_email_is_required">Current email is required</string>
    <string name="user_fragment_credentials_new_email_is_required">New email is required</string>
    <string name="user_fragment_credentials_verification_code_is_required">Verification is required</string>
    <string name="user_fragment_credentials_current_password_is_required">Current password is required</string>
    <string name="user_fragment_credentials_new_password_is_required">New password is required</string>
    <string name="user_fragment_favourites_no_favourites_yet">No favourites yet</string>
    <string name="user_fragment_dashboard_my_coupons">My Coupons</string>
    <string name="user_fragment_dashboard_image_video_upload">Upload</string>
    <string name="user_fragment_dashboard">Dashboard</string>
    <string name="user_fragment_credentials_verification_code">Verification code</string>
</resources>